@@ -1,6 +1,7 @@
-
 Changes with Apache 2.0.39
 
+  *) Improve ap_get_client_block implementation by using APR-util helper
+     functions.  [Justin Erenkrantz]
 
 Changes with Apache 2.0.38
 
